--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-
 }
 
 .header__theme-menu {
@@ -162,7 +161,7 @@
   grid-row-gap: 0px;
 }
 
-.general__headers{
+.general__headers {
   font-family: "IBM Plex Mono", monospace;
   font-style: normal;
   font-weight: 700;
@@ -186,7 +185,7 @@
   margin-bottom: 10px;
 }
 
-.explanations__title__section__how__consentrate{
+.explanations__title__section__how__consentrate {
   margin-bottom: 0px;
 }
 
@@ -204,21 +203,15 @@
   padding-bottom: 24px;
 }
 
-.explanations__description {
+.explanations__description:last-child {
   padding-bottom: 0px;
 }
 
-
-/* .hard__to__concentrate__explanations__description {
-  padding-bottom: 20px;
-} */
-
-.explanations__container{
+.explanations__container {
   padding-bottom: 20px;
 }
 
-
-.explanations__container:last-child{
+.explanations__container:last-child {
   padding-bottom: 0px;
 }
 
@@ -245,14 +238,14 @@
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   grid-template-rows: auto;
   grid-column-gap: 20px;
-  grid-row-gap:24px ;
+  grid-row-gap: 24px;
 }
 
 .concentration__section {
   margin: 60px 20px 0px 20px;
 }
 
-.concentration__section-top{
+.concentration__section-top {
   margin: 80px 20px 0px 20px;
 }
 
@@ -353,7 +346,6 @@
 }
 
 @media (max-width: 768px) {
-
   .decorated-zone {
     row-gap: 50px;
   }
@@ -403,11 +395,9 @@
     height: 100%;
     margin-top: 0px;
   }
-
 }
 /*слишком рано меняю медиа запрос  */
 @media (max-width: 410px) {
-
   .decorated-zone {
     row-gap: 20px;
     margin-bottom: 40px;
@@ -541,5 +531,4 @@
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     margin-top: 64px;
   }
-
 }
