--- a/styles/style.css
+++ b/styles/style.css
@@ -121,8 +121,6 @@
   white-space: pre-line;
 }
 
-.footer__container::after,
-.footer__container::before,
 .decorated-zone::before,
 .decorated-zone::after {
   content: "";
@@ -132,7 +130,6 @@
   box-sizing: border-box;
 }
 
-.footer__container::before,
 .decorated-zone::before {
   top: 20px;
   right: 20px;
@@ -140,7 +137,6 @@
   border-right: 1px solid var(--nav-bar-color);
 }
 
-.footer__container::after,
 .decorated-zone::after {
   bottom: 20px;
   left: 20px;
@@ -179,6 +175,10 @@
   grid-area: 1 / 2 / span 1 / span 1;
 }
 
+.hard__to__concentrate__paragrafs__container > *:last-child {
+  padding-bottom: 0px;
+}
+
 .explanations__title {
   color: var(--color-description-title);
   background-color: var(--accent-color);
@@ -211,7 +211,7 @@
   padding-bottom: 20px;
 }
 
-.explanations__container:last-child {
+.explanations__container :last-child {
   padding-bottom: 0px;
 }
 
@@ -241,11 +241,19 @@
   grid-row-gap: 24px;
 }
 
+.explanations__container__horisontal {
+  padding-bottom: 0px;
+}
+
 .concentration__section {
   margin: 60px 20px 0px 20px;
 }
 
 .concentration__section-top {
+  margin: 80px 20px 0px 20px;
+}
+
+.concentration__section__how__to__concentrate__better {
   margin: 80px 20px 0px 20px;
 }
 
@@ -335,10 +343,6 @@
   margin: auto;
 }
 
-.border__footer__container {
-  grid-area: 3 / 1 / span 1 / span 1;
-}
-
 .footer {
   margin-top: 60px;
   height: 100vh;
@@ -368,8 +372,16 @@
     margin: 8px 0 0 0;
   }
 
+  .explanations__container__horisontal {
+    padding-bottom: 20px;
+  }
+
   .chapter__title {
     max-width: 236px;
+  }
+
+  .concentration__section__how__to__concentrate__better {
+    margin: 60px 20px 0px 20px;
   }
 
   .explanations__description_pre-line {
@@ -378,7 +390,6 @@
 
   .header__description {
     max-width: 364px;
-    max-height: 125px;
   }
 
   .header__description__wrap {
@@ -396,8 +407,8 @@
     margin-top: 0px;
   }
 }
-/*слишком рано меняю медиа запрос  */
-@media (max-width: 410px) {
+
+@media (max-width: 570px) {
   .decorated-zone {
     row-gap: 20px;
     margin-bottom: 40px;
@@ -418,6 +429,10 @@
 
   .concentration__section {
     margin: 20px 10px 20px 10px;
+  }
+
+  .concentration__section__how__to__concentrate__better {
+    margin: 30px 10px 20px 10px;
   }
 
   .explanations__description_pre-line {
@@ -444,13 +459,11 @@
     padding-left: 10px;
   }
 
-  .footer__container::before,
   .decorated-zone::before {
     top: 10px;
     right: 10px;
   }
 
-  .footer__container::after,
   .decorated-zone::after {
     bottom: 10px;
     left: 10px;
